# liferay-headless-site-structure-impl/rest-openapi.yaml
@@ -245,6 +245,12 @@ paths:
                   required: true
                   schema:
                       type: string
+                - in: query
+                  name: publicationId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
             responses:
                 200:
                     content:
