# liferay-headless-site-structure-impl/src/main/java/ru/tele2/liferay/headless/internal/resource/v1_0/BaseSiteStructureResourceImpl.java
@@ -96,6 +96,10 @@ public abstract class BaseSiteStructureResourceImpl
 			@io.swagger.v3.oas.annotations.Parameter(
 				in = io.swagger.v3.oas.annotations.enums.ParameterIn.PATH,
 				name = "friendlyUrlPath"
+			),
+			@io.swagger.v3.oas.annotations.Parameter(
+				in = io.swagger.v3.oas.annotations.enums.ParameterIn.QUERY,
+				name = "publicationId"
 			)
 		}
 	)
@@ -118,7 +122,11 @@ public abstract class BaseSiteStructureResourceImpl
 			@io.swagger.v3.oas.annotations.Parameter(hidden = true)
 			@javax.validation.constraints.NotNull
 			@javax.ws.rs.PathParam("friendlyUrlPath")
-			String friendlyUrlPath)
+			String friendlyUrlPath,
+			@io.swagger.v3.oas.annotations.Parameter(hidden = true)
+			@javax.validation.constraints.NotNull
+			@javax.ws.rs.QueryParam("publicationId")
+			Long publicationId)
 		throws Exception {
 
 		return new SiteStructurePage();
